--- a/package.json
+++ b/package.json
@@ -9,7 +9,15 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.3",
+    "framer-motion": "^12.33.0",
+    "jsonwebtoken": "^9.0.3",
+    "lenis": "^1.3.17",
+    "mongodb": "^7.1.0",
+    "mongoose": "^9.1.6",
+    "motion": "^12.33.0",
     "next": "16.1.6",
+    "next-auth": "^4.24.13",
     "react": "19.2.3",
     "react-dom": "19.2.3"
   },
