--- a/package.json
+++ b/package.json
@@ -11,15 +11,17 @@
   "dependencies": {
     "bcryptjs": "^3.0.3",
     "framer-motion": "^12.33.0",
+    "geist": "^1.7.0",
     "jsonwebtoken": "^9.0.3",
     "lenis": "^1.3.17",
     "mongodb": "^7.1.0",
     "mongoose": "^9.1.6",
     "motion": "^12.33.0",
-    "next": "16.1.6",
+    "next": "^15.5.12",
     "next-auth": "^4.24.13",
-    "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "razorpay": "^2.9.6",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
